data/derived/comb/progs/unify/prog6809.ml.out
Characters 91-99:
  | false -> [digitsOfInt (n / 10)] @ n mod 10;;
                                      ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list list
